# fishCenSV2

./: .gitignore  CMakeLists.txt  README.md  coco-classes-fish.txt  main.cpp
include/: util.hpp
libs/bytetrack/: BYTETracker.cpp  BYTETracker.h  README.md  dataType.h
libs/client/: README.md  client.cpp  client.hpp
libs/server/: README.md  server.cpp  server.hpp  session.cpp  session.hpp
libs/yolo/: README.md  yolov8.cpp  yolov8.hpp
